--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-12.\ ">
+            <div class="col-md-12">
                 <img id="harryHeader" src="http://www.vancouversun.com/entertainment/harrypotter/quiz/images/harry-potter.jpg">
             </div>
         </div>
